[gd_scene load_steps=3 format=2]

[ext_resource path="res://Cards/CardBase.gd" type="Script" id=1]
[ext_resource path="res://Assets/GUI/SelfmadeAssets/CardBaseSimple.png" type="Texture" id=2]

[node name="CardBase" type="MarginContainer"]
margin_right = 200.0
margin_bottom = 300.0
rect_pivot_offset = Vector2( 100, 150 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="Bars" type="VBoxContainer" parent="."]
margin_right = 200.0
margin_bottom = 300.0

[node name="TopGap" type="MarginContainer" parent="Bars"]
margin_right = 200.0
margin_bottom = 1.0
rect_min_size = Vector2( 0, 1 )

[node name="Bar1" type="HBoxContainer" parent="Bars"]
margin_top = 5.0
margin_right = 200.0
margin_bottom = 19.0

[node name="LeftGap" type="MarginContainer" parent="Bars/Bar1"]
margin_right = 20.0
margin_bottom = 14.0
rect_min_size = Vector2( 20, 0 )

[node name="Name" type="MarginContainer" parent="Bars/Bar1"]
margin_left = 24.0
margin_right = 105.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Bars/Bar1/Name"]
margin_right = 81.0
margin_bottom = 14.0
text = "Big Man"

[node name="Cost" type="MarginContainer" parent="Bars/Bar1"]
margin_left = 109.0
margin_right = 191.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Bars/Bar1/Cost"]
margin_right = 82.0
margin_bottom = 14.0
text = "3"
align = 2

[node name="RightGap" type="MarginContainer" parent="Bars/Bar1"]
margin_left = 195.0
margin_right = 200.0
margin_bottom = 14.0
rect_min_size = Vector2( 5, 0 )

[node name="MidGap" type="MarginContainer" parent="Bars"]
margin_top = 23.0
margin_right = 200.0
margin_bottom = 173.0
rect_min_size = Vector2( 0, 150 )

[node name="Bar2" type="HBoxContainer" parent="Bars"]
margin_top = 177.0
margin_right = 200.0
margin_bottom = 191.0

[node name="LeftGap" type="MarginContainer" parent="Bars/Bar2"]
margin_right = 20.0
margin_bottom = 14.0
rect_min_size = Vector2( 20, 0 )

[node name="Type" type="MarginContainer" parent="Bars/Bar2"]
margin_left = 24.0
margin_right = 78.0
margin_bottom = 14.0

[node name="Type" type="Label" parent="Bars/Bar2/Type"]
margin_right = 54.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Creature"

[node name="SubType" type="MarginContainer" parent="Bars/Bar2"]
margin_left = 82.0
margin_right = 176.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Bars/Bar2/SubType"]
margin_right = 94.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Human"
align = 2

[node name="RightGap" type="MarginContainer" parent="Bars/Bar2"]
margin_left = 180.0
margin_right = 200.0
margin_bottom = 14.0
rect_min_size = Vector2( 20, 0 )

[node name="Bar3" type="HBoxContainer" parent="Bars"]
margin_top = 195.0
margin_right = 200.0
margin_bottom = 261.77
rect_min_size = Vector2( 0, 66.77 )

[node name="LeftGap" type="MarginContainer" parent="Bars/Bar3"]
margin_right = 20.0
margin_bottom = 66.0
rect_min_size = Vector2( 20, 0 )

[node name="SpecialText" type="MarginContainer" parent="Bars/Bar3"]
margin_left = 24.0
margin_right = 176.0
margin_bottom = 66.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Bars/Bar3/SpecialText"]
modulate = Color( 0, 0, 0, 1 )
margin_top = 17.0
margin_right = 152.0
margin_bottom = 48.0
size_flags_horizontal = 9
text = "Does damage when enters battlefield"
autowrap = true

[node name="RightGap" type="MarginContainer" parent="Bars/Bar3"]
margin_left = 180.0
margin_right = 200.0
margin_bottom = 66.0
rect_min_size = Vector2( 20, 0 )

[node name="Bar4" type="HBoxContainer" parent="Bars"]
margin_top = 265.0
margin_right = 200.0
margin_bottom = 279.0

[node name="LeftGap" type="MarginContainer" parent="Bars/Bar4"]
margin_right = 20.0
margin_bottom = 14.0
rect_min_size = Vector2( 20, 0 )

[node name="Attack" type="MarginContainer" parent="Bars/Bar4"]
margin_left = 24.0
margin_right = 98.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Bars/Bar4/Attack"]
modulate = Color( 0.054902, 0.054902, 0.054902, 1 )
margin_right = 74.0
margin_bottom = 14.0
text = "5"

[node name="Health" type="MarginContainer" parent="Bars/Bar4"]
margin_left = 102.0
margin_right = 176.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Bars/Bar4/Health"]
margin_right = 74.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "3"
align = 2
valign = 2

[node name="RightGap" type="MarginContainer" parent="Bars/Bar4"]
margin_left = 180.0
margin_right = 200.0
margin_bottom = 14.0
rect_min_size = Vector2( 20, 0 )

[node name="Tween" type="Tween" parent="."]

[node name="Focus" type="TextureButton" parent="."]
margin_right = 200.0
margin_bottom = 300.0

[connection signal="gui_input" from="Focus" to="." method="_on_Focus_gui_input"]
[connection signal="mouse_entered" from="Focus" to="." method="_on_Focus_mouse_entered"]
[connection signal="mouse_exited" from="Focus" to="." method="_on_Focus_mouse_exited"]
